--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,24 +114,45 @@ body{
 *********************/
 .background{
     position: relative;
-    background-image: url(../images/congruent_pentagon.png);
+    background-image: url(../images/dot-grid.png);
     min-width: 100vh;
     min-height: 100vh;
     margin-right: 0;
     right: 0;
 }
-#intro{
-    position: absolute;
-    background:url(../images/Cover_Photo.jpg);
-    background-color: rgb(0,0,0, 0.5);
-    background-repeat:no-repeat;
-    left: 20vw;
-    background-position: center;
-    /* width: 833px;
-    height: 625px; */
-    width: 60vw;
-    height: 100vh;
-    z-index: 1;
+
+@media screen and (max-width: 730px) {
+	#intro{
+		position: absolute;
+		background:url(../images/Me2.jpg);
+		background-repeat:no-repeat;
+		background-size: cover;
+		border-radius: 25px;
+		left: 20vw;
+		background-position: center;
+		/* width: 833px;
+		height: 625px; */
+		width: 60vw;
+		height: 100vh;
+		z-index: 1;
+	}
+}
+
+@media screen and (min-width: 730px) {
+	#intro{
+		position: absolute;
+		background:url(../images/Cover_Photo.jpg);
+		background-repeat:no-repeat;
+		background-size: cover;
+		border-radius: 25px;
+		left: 20vw;
+		background-position: center;
+		/* width: 833px;
+		height: 625px; */
+		width: 60vw;
+		height: 100vh;
+		z-index: 1;
+	}
 }
 
 .layer{
@@ -141,4 +162,5 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
+	z-index: 2;
 }
