--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,8 @@
     /* Place content 60px from the top */
     transition: 0.5s;
     /* 0.5 second transition effect to slide in the sidenav */
+	box-shadow: 10px 10px 22px -2px rgba(0,0,0,0.75);
+	
 }
 
 /* The navigation menu links */
@@ -86,6 +88,7 @@
 #nav_icons{
     position: fixed;
     top: 50px;
+	
 }
 
 #nav_icons a:hover{
@@ -106,7 +109,7 @@ body{
 #main{
     margin-left: 50px;
     padding: 0;
-    border-left: solid black 5px;
+    border-left: solid black 3px;
 }
 
 /*********************
@@ -128,13 +131,22 @@ body{
 		background-repeat:no-repeat;
 		background-size: cover;
 		border-radius: 25px;
-		left: 20vw;
+		left: 25vw;
 		background-position: center;
-		/* width: 833px;
-		height: 625px; */
-		width: 60vw;
-		height: 100vh;
+		top: 10vh;
+		width: 50vw;
+		height: 80vh;
 		z-index: 1;
+		box-shadow: 10px 10px 22px -2px rgba(0,0,0,0.75);
+	}
+	#intro_text{
+	position: absolute;
+	margin-left: 5vw;
+	margin-top: 5vh;
+	color: white;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 900;
+	font-size: 5vh;
 	}
 }
 
@@ -145,13 +157,22 @@ body{
 		background-repeat:no-repeat;
 		background-size: cover;
 		border-radius: 25px;
-		left: 20vw;
+		left: 25vw;
 		background-position: center;
-		/* width: 833px;
-		height: 625px; */
-		width: 60vw;
-		height: 100vh;
+		top: 10vh;
+		width: 50vw;
+		height: 80vh;
 		z-index: 1;
+		box-shadow: 10px 10px 22px -2px rgba(0,0,0,0.75);
+	}
+	#intro_text{
+	position: absolute;
+	margin-left: 5vw;
+	margin-top: 5vh;
+	color: black;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 900;
+	font-size: 5vh;
 	}
 }
 
@@ -163,4 +184,10 @@ body{
     width: 100%;
     height: 100%;
 	z-index: 2;
+}
+
+.section_banner{
+	border: solid black 1px;
+	background-color: gray;
+	text-align: center;
 }
