--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,8 +33,7 @@
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    /* color: #818181; */
-    color: black;
+	color: black;
     display: block;
     transition: 0.3s;
     margin: 50px 5px 50px;
@@ -42,7 +41,7 @@
 
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
-    color: #f1f1f1;
+    color: #0055FF;
 }
 
 /* Position and style the close button (top right corner) */
@@ -88,11 +87,12 @@
 #nav_icons{
     position: fixed;
     top: 50px;
+	color: black;
 	
 }
 
 #nav_icons a:hover{
-    color: #f1f1f1;
+    color: #0055FF;
     transition: 0.3s;
 }
 
@@ -109,7 +109,11 @@ body{
 #main{
     margin-left: 50px;
     padding: 0;
-    border-left: solid black 3px;
+    border-left: solid #0055FF 3px;
+}
+
+#main p{
+	padding-left: 10px;
 }
 
 /*********************
@@ -147,6 +151,7 @@ body{
 	font-family: 'Roboto', sans-serif;
 	font-weight: 900;
 	font-size: 5vh;
+	color: #FF5E00;
 	}
 }
 
@@ -173,6 +178,7 @@ body{
 	font-family: 'Roboto', sans-serif;
 	font-weight: 900;
 	font-size: 5vh;
+	color: #FF5E00;
 	}
 }
 
@@ -187,7 +193,8 @@ body{
 }
 
 .section_banner{
-	border: solid black 1px;
-	background-color: gray;
+	border: solid #0055FF 1px;
+	background-color: #FF5E00;
 	text-align: center;
+	border-radius: 15px;
 }
