--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@
 
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
-    color: #0055FF;
+    color: #65959C;
 }
 
 /* Position and style the close button (top right corner) */
@@ -92,7 +92,7 @@
 }
 
 #nav_icons a:hover{
-    color: #0055FF;
+    color: #65959C;
     transition: 0.3s;
 }
 
@@ -109,18 +109,20 @@ body{
 #main{
     margin-left: 50px;
     padding: 0;
-    border-left: solid #0055FF 3px;
+    border-left: solid #5D6C85 3px;
 }
 
-#main p{
-	padding-left: 10px;
+#main p, pre{
+	padding: 20px 20px 10px 20px;
+	margin-bottom: 0;
+	font-family: 'Roboto', sans-serif;
+	font-size: 2.5vh;
 }
 
-/*********************
-    Cover Photo
-*********************/
+/*********************/
+
 .background{
-    position: relative;
+    /* position: relative; */
     background-image: url(../images/dot-grid.png);
     min-width: 100vh;
     min-height: 100vh;
@@ -144,14 +146,7 @@ body{
 		box-shadow: 10px 10px 22px -2px rgba(0,0,0,0.75);
 	}
 	#intro_text{
-	position: absolute;
-	margin-left: 5vw;
-	margin-top: 5vh;
-	color: white;
-	font-family: 'Roboto', sans-serif;
-	font-weight: 900;
-	font-size: 5vh;
-	color: #FF5E00;
+	display: none;
 	}
 }
 
@@ -178,11 +173,10 @@ body{
 	font-family: 'Roboto', sans-serif;
 	font-weight: 900;
 	font-size: 5vh;
-	color: #FF5E00;
 	}
 }
 
-.layer{
+/* .layer{
     background-color: rgba(45, 99, 90, 0.432);
     position: absolute;
     top: 0;
@@ -190,11 +184,24 @@ body{
     width: 100%;
     height: 100%;
 	z-index: 2;
-}
+} */
 
 .section_banner{
-	border: solid #0055FF 1px;
-	background-color: #FF5E00;
+	/* background-color: #708090; */
+	background:url(../images/concrete_wall.png);
 	text-align: center;
-	border-radius: 15px;
+	border-radius: 5px;
+	color: #659C9B;
+	padding: 5px 0;
+}
+
+.card{
+	padding-top: 10px;
+	margin: 10px 20px 10px 20px;
+	border-radius: 10px;
+	box-shadow: 10px 10px 22px -2px rgba(0,0,0,0.55);
+}
+
+.morningstar{
+	padding: 20px;
 }
