--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@
     position: fixed;
     color: black;
     height: 100%;
-    box-shadow: 10px 0 5px -5px #888;
+    box-shadow: 10px 10px 22px -2px rgba(0,0,0,0.75);
 }
 
 #nav_icons a:hover{
@@ -150,7 +150,7 @@ body{
 		top: 10vh;
 		width: 60vw;
 		height: 80vh;
-		z-index: 1;
+		z-index: 0;
 		box-shadow: 10px 10px 22px -2px rgba(0,0,0,0.75);
 	}
 	#intro_text{
@@ -170,7 +170,7 @@ body{
 		top: 10vh;
 		width: 50vw;
 		height: 80vh;
-		z-index: 1;
+		z-index: 0;
 		box-shadow: 10px 10px 22px -2px rgba(0,0,0,0.75);
 	}
 	#intro_text{
