--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,18 +184,8 @@ body{
 	}
 }
 
-/* .layer{
-    background-color: rgba(45, 99, 90, 0.432);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-	z-index: 2;
-} */
 
 .section_banner{
-	/* background-color: #708090; */
 	background:url(../images/concrete_wall.png);
 	text-align: center;
 	border-radius: 5px;
@@ -212,4 +202,20 @@ body{
 
 .morningstar{
 	padding: 20px;
+}
+
+#education:not(div){
+    margin-left: 10px;
+}
+
+#education ul{
+    margin-block-end: 0;
+    padding-bottom: 1em;
+}
+
+#education img{
+    display: block;
+    margin-top: 1em;
+    margin-left: auto;
+    margin-right: auto;
 }
